# scilab_kernel

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  flit.ini  pyproject.toml  scilab_kernel.ipynb  scilab_kernel.py  setup.py  test_scilab_kernel.py
kernelspec/: kernel.json
scilab_kernel/: __init__.py  __main__.py  _make_figures.sci  check.py  install.py  kernel.json  kernel.py
scilab_kernel/magics/: plot_magic.py
